force-app/main/default/objects/LLC_BI__Requirement_Dependency__c/fields/LLC_BI__Controlling_Requirement__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Controlling_Requirement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This required field contains a reference to the Requirement which controls this dependency.</description>
    <inlineHelpText>This required field contains a reference to the Requirement which controls this dependency.</inlineHelpText>
    <label>Controlling Requirement</label>
    <referenceTo>LLC_BI__Requirement__c</referenceTo>
    <relationshipLabel>Dependent Requirements</relationshipLabel>
    <relationshipName>Dependent_Requirements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>