force-app/main/default/objects/LLC_BI__Requirement_Dependency__c/fields/LLC_BI__Dependency_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Dependency_Type__c</fullName>
    <description>This required field defines the behavior of the dependency between the associated Requirements.</description>
    <inlineHelpText>This required field defines the behavior of the dependency between the associated Requirements.</inlineHelpText>
    <label>Dependency Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finish to Start</fullName>
                <default>true</default>
                <label>Finish to Start</label>
            </value>
            <value>
                <fullName>Start to Start</fullName>
            </value>
            <value>
                <fullName>Finish to Finish</fullName>
            </value>
            <value>
                <fullName>Start to Finish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>