force-app/main/default/objects/LLC_BI__Requirement_Dependency__c/fields/LLC_BI__Dependent_Requirement__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Dependent_Requirement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This required field contains a reference to the Requirement which is controlled by this dependency.</description>
    <inlineHelpText>This required field contains a reference to the Requirement which is controlled by this dependency.</inlineHelpText>
    <label>Dependent Requirement</label>
    <referenceTo>LLC_BI__Requirement__c</referenceTo>
    <relationshipLabel>Controlling Requirements</relationshipLabel>
    <relationshipName>Controlling_Requirements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>